--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseOnline/transmitir.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseOnline/transmitir.xhtml
@@ -133,7 +133,7 @@
                 <div class="Container100">
                     <p:selectBooleanButton offLabel="Iniciar Transmisión" onLabel="Parar Transmición" onchange="transmision()" valueChangeListener="#{gestionClasesOnlineController.iniciarClase()}"></p:selectBooleanButton>
                     
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:commandButton id="otrasOpciones" value="Accesos Rápidos" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Gestionar Docentes" >    
                         </p:menuitem>
