--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseOnline/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseOnline/ver.xhtml
@@ -86,7 +86,7 @@
                 </div>
                 <p:commandButton value="Recibir Clase" onclick="ver()"></p:commandButton>
                 <p:commandButton value="Salir de Clase" onclick="salir()" action="#{gestionClasesOnlineController.setIndexMenu(0)}"></p:commandButton>
-                <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                <p:commandButton id="otrasOpciones" value="Accesos Rápidos" type="button" icon="ui-icon-extlink" />
                 <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                     <p:menuitem value="Gestionar Docentes" >    
                     </p:menuitem>
