--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/editar.xhtml
@@ -41,7 +41,7 @@
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1" resetValues="true" listener="#{catGradoController.cancelaModifica(catGradoController.modifica)}"/>
                     </p:commandButton>
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:commandButton id="otrasOpciones" value="Accesos Rápidos" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Catálogo de materias" url="#{siteUrls.catMateria}" >    
                         </p:menuitem>
