--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionArchivosMultimedia/editar.xhtml
@@ -54,7 +54,7 @@
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="mod_p1" resetValues="true" listener="#{gestionArchivoMultimediaController.cancelaModifica(gestionArchivoMultimediaController.archivoModifica)}"/>
                     </p:commandButton>
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:commandButton id="otrasOpciones" value="Accesos Rápidos" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Gestionar Componentes interactivos" url="#{siteUrls.componenteInteractiva}" >    
                         </p:menuitem>
