--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/MntoAnioEscolar/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/MntoAnioEscolar/ver.xhtml
@@ -46,7 +46,7 @@
                     <p:commandButton value="Regresar" immediate="true">
                         <p:ajax update="p1" resetValues="true" listener="#{gestionarAnioEscolarController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:commandButton id="otrasOpciones" value="Accesos Rápidos" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Matricula de alumnos" url="#{siteUrls.gestionAlumnos}">    
                         </p:menuitem>
