--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionNotas/editar.xhtml
@@ -51,7 +51,7 @@
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="mod_p1" resetValues="true" listener="#{gestionNotaController.cancelaModifica(gestionNotaController.notaModifica)}"/>
                     </p:commandButton>
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:commandButton id="otrasOpciones" value="Accesos Rápidos" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Gestionar Evaluaciones" url="#{siteUrls.gestionEvaluacion}" >    
                         </p:menuitem>
