--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/editar.xhtml
@@ -74,7 +74,7 @@
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1,archivo,fotoSubida" resetValues="true" listener="#{gestionarDocentesController.cancelaModifica(gestionarDocentesController.docenteModifica)}"/>
                     </p:commandButton>
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:commandButton id="otrasOpciones" value="Accesos Rápidos" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Programacion de clases" url="#{siteUrls.programacionClases}" rendered="#{loginController.mostrarA('1')}" >    
                         </p:menuitem>
