--- a/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/ver.xhtml
@@ -61,7 +61,7 @@
                     <p:commandButton value="Regresar" immediate="true">
                         <p:ajax update="p1,fotoSubida" resetValues="true" listener="#{gestionarNoticiasController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:commandButton id="otrasOpciones" value="Accesos Rápidos" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
                         <p:menuitem value="Portal Consulta">    
                         </p:menuitem>
