cambo de labels en consultas

--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/editar.xhtml
@@ -39,7 +39,7 @@
                 <p:tooltip for="consulta" value="Descripcion detallada de la consutla"/>
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
-                    <p:commandButton tabindex="12" value="Guardar" action="#{gestionarConsultasController.guardarModifica()}" update="p1,focus" />
+                    <p:commandButton tabindex="12" value="Enviar" action="#{gestionarConsultasController.guardarModifica()}" update="p1,focus" />
                     <p:commandButton value="Limpiar" immediate="true">
                         <p:ajax update="p1,focus" resetValues="true" />
                     </p:commandButton>
