--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/crear.xhtml
@@ -41,7 +41,7 @@
                 
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
-                    <p:commandButton value="Guardar" action="#{gestionarConsultasController.guardar()}" update="p1" />
+                    <p:commandButton value="Enviar" action="#{gestionarConsultasController.guardar()}" update="p1" />
                     <p:commandButton value="Limpiar" immediate="true">
                         <p:ajax update="p1" resetValues="true" />
                     </p:commandButton>
