--- a/Nueva carpeta/unicomer_generator/webapplication_psdisr/src/main/webapp/views/generators/selectionConfig.xhtml
+++ b/Nueva carpeta/unicomer_generator/webapplication_psdisr/src/main/webapp/views/generators/selectionConfig.xhtml
@@ -12,7 +12,7 @@
                     <p:panelGrid columns="2" layout="grid">
                         <p:outputLabel value="#{BundlePsdisr.ui_psdisr_selectionConfig_schemaToCompare}"/>
                         <p:inputText value="#{generator.squemaVal.name}" />
-                        <p:commandButton icon="fa fa-plus" title="#{BundlePsdisr.ui_psdisr_configOrigDest_addTarget}" update="schemaOut @parent"  action="#{generator.reinit}">
+                        <p:commandButton icon="fa fa-plus" title="#{BundlePsdisr.ui_psdisr_configOrigDest_addTarget}" update="schemaOut @parent"  action="#{generator.reinitSchemaVal}">
                             <p:collector value="#{generator.squemaVal}" addTo="#{generator.squemaTable}" unique="true"/>
                         </p:commandButton>
                     </p:panelGrid>
